--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         </section>
       </section>
     </main>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 </html>
