Added backslash to min and max

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
       <!-- current weather section -->
       <section id="current-weather-container">
-          <h1 class="location-label">Stockton</h1>
+          <h1 class="location-label"></h1>
 
           <div class="flex-container" id="temp-summary-container">
               <div>
                     <img src="./assets/images/summary-icons/sunny.png" alt="" id="currently-icon">
               </div>
               <div>
-                    <h1 id="degrees-label">70&#176</h1>
-                    <p id="summary-label">Clear Day</p>
+                    <h1 id="degrees-label"></h1>
+                    <p id="summary-label"></p>
               </div>
           </div>
 
@@ -80,7 +80,7 @@
         
         <!-- Hourly Weather -->
         <div id="hourly-weather-wrapper" class="bottom-panel-body" visible="false">
-                <div class="flex-container weather-container">
+                <div class="flex-container weather-container display-none">
                     <div>
                         <h1>14:00</h1>
                     </div>
